# tectonicdb

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  circle.yml  dev-tmux  docker-compose.yml  dtfconcat1.dtf  dtfconcat2.dtf  dtfconcat_out.dtf  fuck  getting-started.html  index.html  publish.sh  read_training_data.py  real.dtf  search_index.json  settings.sample.toml  settings.toml  start-server.sh  test.dtf  test.npy
.github/: dependabot.yml
.github/workflows/: rust.yml
API/: index.html  specs.html
bins/dtftools/: dtfcat.rs  dtfcheck.rs  dtfconcat.rs  dtfnumpy.rs  dtfrepair.rs  dtfsplit.rs  main.rs  write_npy.rs
bins/dtftools/numpy/: mod.rs  write_npy.rs
bins/gen_train_data/: main.rs
bins/gen_train_data/src/: main.rs  record.rs
bins/tdb/: interactive.rs  main.rs
bins/tdb-server/: main.rs
bins/tdb-server/src/: main.rs
bins/tdb/src/: main.rs
cli/: db.rs
cli/golang/: tectonic.go
cli/java/: tectonic.java
cli/python/: ffi.py  get.py  measure-latency.py  monitor.py  subscribe.py  tectonic.py
cli/rust/: error.rs  insert_command.rs  mod.rs
cli/tectonicjs/: .gitignore  package-lock.json  package.json  tsconfig.json
cli/tectonicjs/built/: index.d.ts  index.js  index.js.map  pool.d.ts  pool.js  pool.js.map  tectonic.d.ts  tectonic.js  tectonic.js.map  typing.js  typing.js.map  typings.d.ts  typings.js  typings.js.map
cli/tectonicjs/src/: index.ts  pool.ts  tectonic.ts  typings.ts
cli/tectonicjs/test/: test.ts
conf/gstorage/: example.conf.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/db/: cxn.rs  mod.rs
crates/dtfcat/: Cargo.toml
crates/dtfconcat/: Cargo.toml
crates/dtfconcat/src/: main.rs
crates/dtfsplit/: Cargo.toml
crates/dtftools/: Cargo.toml
crates/dtftools/src/: dtfconcat.rs  main.rs
crates/gen_train_data/: Cargo.toml
crates/gen_train_data/src/: main.rs  record.rs  write_npy.rs
crates/lib/: Cargo.toml
crates/lib/src/: utils.rs
crates/lib/src/client/: error.rs
crates/lib/src/postprocessing/: event.rs
crates/lib/src/postprocessing/candle/: candlestick_graph.rs
crates/libtdbcli/: Cargo.toml
crates/libtdbcli/src/: client.rs  error.rs  lib.rs
crates/libtdbserver/: Cargo.toml
crates/libtdbserver/src/: handler.rs  lib.rs  server.rs  settings.rs  state.rs
crates/libtdbserver/src/plugins/: influx.rs
crates/libtdbserver/src/plugins/gstorage/: run.rs
crates/libtdbserver/src/plugins/history/: mod.rs
crates/libtectonic/: Cargo.toml
crates/libtectonic/src/: lib.rs  utils.rs
crates/libtectonic/src/client/: mod.rs
crates/libtectonic/src/dtf/: ffi.rs  file_format.rs  update.rs
crates/libtectonic/src/postprocessing/: histogram.rs  level.rs  orderbook.rs
crates/libtectonic/src/postprocessing/candle/: candle.rs  candlestick_graph.rs  mod.rs  tick_bar.rs  tick_bars.rs  time_bars.rs  volume_bars.rs
crates/libtectonic/src/storage/: README.md  filetype.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  main.rs  parser.rs  prelude.rs  server.rs  state.rs  utils.rs
crates/server/src/plugins/: mod.rs
crates/server/src/plugins/gstorage/: README.md  metadata.rs  upload.rs
crates/server/src/plugins/history/: mod.rs
crates/tdb/: Cargo.toml
crates/tdb-cli/: Cargo.toml
crates/tdb-cli/src/: client.rs  error.rs  lib.rs
crates/tdb-core/: Cargo.toml
crates/tdb-core/src/: README.md  lib.rs  utils.rs
crates/tdb-core/src/dtf/: file_format.rs  update.rs
crates/tdb-core/src/postprocessing/: level.rs  mod.rs  orderbook.rs
crates/tdb-core/src/postprocessing/candle/: candlestick_graph.rs  dollar_bars.rs  mod.rs  tick_bars.rs  time_bars.rs  volume_bars.rs
crates/tdb-core/src/storage/: dtf_file_metadata.rs  file_metadata.rs  utils.rs
crates/tdb-server/: Cargo.toml
crates/tdb-server-core/: Cargo.toml
crates/tdb-server-core/src/: handler.rs  lib.rs  parser.rs  prelude.rs  server.rs  settings.rs  state.rs  utils.rs
crates/tdb-server-core/src/plugins/: history.rs  influx.rs
crates/tdb-server-core/src/plugins/gstorage/: metadata.rs  mod.rs  run.rs  upload.rs
crates/tdb-server-lib/: Cargo.toml
crates/tdb-server-lib/src/: handler.rs  prelude.rs  server.rs  state.rs  utils.rs
crates/tdb-server-lib/src/plugins/: README.md  mod.rs
crates/tdb-server/src/: handler.rs  main.rs  parser.rs  prelude.rs  server.rs  state.rs  utils.rs
crates/tdb-server/src/plugins/: influx.rs  mod.rs
crates/tdb/src/: main.rs
docs/: README.md  SUMMARY.md  getting-started.html  getting-started.md  index.html
docs/API/: README.md  index.html  specs.html  specs.md
docs/_book/: example-program.html  getting-started.html  index.html  search_index.json
docs/_book/API/: index.html  specs.html
docs/examples/: README.md  example-plot.html  example-plot.md  example-program.html  example-program.md  example-rust-db.md  index.html  js.html  js.md  monitor-program.html  monitor-program.md
examples/: example-plot.html  example-program.html  example-rust-db.html  index.html  js.html  monitor-program.html
javascript-client/: client.js  index.js  pool.js  tectonic.js
python-client/: client.py  tectonic.py
src/: conf.rs  db.rs  dtf.rs  main.rs  server.rs
src/lib/: candle.rs  dtf.rs  event.rs  level.rs  lib.rs  ops.rs  orderbook.rs  trade.rs  update.rs  utils.rs
src/lib/client/: circular_queue.rs  cxn.rs  insert_command.rs  mod.rs  pool.rs
src/lib/dtf/: ffi.rs  file_format.rs  mod.rs  symbol.rs  update.rs
src/lib/postprocessing/: candle.rs  event.rs  histogram.rs  level.rs  mod.rs  orderbook.rs
src/lib/postprocessing/candle/: candle.rs  candles.rs  candlestick_graph.rs  mod.rs  tick_bar.rs  volume_bar.rs
src/lib/storage/: dtf_file_metadata.rs  dtf_storage.rs  file_metadata.rs  filetype.rs  mod.rs  utils.rs
test/: read_training_data.py
test/test-data/: bnc_zrx_btc.dtf
tests/: integration_test.rs
typescript-client/: pool.ts  tectonic.ts  typings.d.ts
