[package]
name = "tdb-server"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "tectonicdb server"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[[bin]]
name = "tdb-server"
bench = false
path = "bins/tdb-server/src/main.rs"

[[bin]]
name = "dtftools"
bench = false
path = "bins/dtftools/src/main.rs"

[[bin]]
name = "tdb"
bench = false
path = "bins/tdb/src/main.rs"


[[bin]]
name = "gen_train_data"
bench = false
path = "bins/gen_train_data/src/main.rs"


[dependencies]
tdb-server-lib = { path = "crates/tdb-server-lib", version = "0.3.0", features = [] }
libtectonic = { path = "crates/libtectonic", version = "0.3.0" }
libtdbcli = { path = "crates/libtdbcli", version = "0.3.0" }

log = "0.4.8"
fern = "0.5.9"
chrono = "0.4.10"
openssl-probe = "0.1.2"
indicatif = "0.13.0"

itertools = "0.8.2"

clap = "2.33.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
byteorder = "1.3.2"
indoc = "0.3.4"
linefeed = "0.6"


[workspace]
members = [
    "crates/*",
]

[[test]]
name = "integration"
path = "tests/integration_test.rs"
