[package]
name = "tectonicdb"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "tectonicdb server"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.5.2"
exclude = ["cli/", "test/test-data/bt_btceth.dtf"]
readme = "README.md"

[[bin]]
name = "tdb-server"
bench = false
path = "bins/tdb-server/main.rs"

[[bin]]
name = "dtftools"
bench = false
path = "bins/dtftools/main.rs"

[[bin]]
name = "tdb"
bench = false
path = "bins/tdb/main.rs"

[dependencies]
tdb_server_core = { path = "crates/tdb-server-core", version = "0.5.0", features = ["influx"] }
tdb_core = { path = "crates/tdb-core", version = "0.5.0" }
tdb_cli = { path = "crates/tdb-cli", version = "0.5.0" }

log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
openssl-probe = "0.1.2"
indicatif = "0.14.0"

itertools = "0.9.0"

clap = "2.33.1"
serde = "1.0.110"
serde_derive = "1.0.104"
serde_json = "1.0.57"
byteorder = "1.3.4"
indoc = "0.3.5"
linefeed = "0.6.0"
memmap = "0.7.0"
zip = "0.5.5"


[workspace]
members = [
    "crates/*",
]

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[features]

default = ["influx"]
influx = []
