[package]
name = "tectonicdb"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "tectonicdb server"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.5.2"
exclude = ["cli/", "test/test-data/bt_btceth.dtf"]
readme = "README.md"

[[bin]]
name = "tdb-server"
bench = false
path = "bins/tdb-server/main.rs"

[[bin]]
name = "dtftools"
bench = false
path = "bins/dtftools/main.rs"

[[bin]]
name = "tdb"
bench = false
path = "bins/tdb/main.rs"

[dependencies]
tdb_server_core = { path = "crates/tdb-server-core", version = "0.5.0", features = ["influx"] }
tdb_core = { path = "crates/tdb-core", version = "0.5.0" }
tdb_cli = { path = "crates/tdb-cli", version = "0.5.0" }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
openssl-probe = "0.1.4"
indicatif = "0.17.0-beta.1"

itertools = "0.10.1"

clap = "3.2.10"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
byteorder = "1.4.3"
indoc = "1.0.3"
linefeed = "0.6.0"
memmap = "0.7.0"
zip = "0.5.13"


[workspace]
members = [
    "crates/*",
]

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[features]

default = ["influx"]
influx = []
