[package]
name = "libtectonic"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "fast datastore server for contiguous order book ticks"
keywords = ["finance", "datastore", "database", "financial"]
repository = "https://github.com/rickyhan/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[dependencies]
bitflags = "1.2.0"
byteorder = "1.3.2"
chrono = "0.4.9"
config = "0.9.3"
csv = "1.1.1"
fern = "0.5.8"
log = "0.4.8"
reqwest = "0.9.21"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
time = "0.1.42"
indexmap = "1.2.0"
libc = "0.2.62"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7.4"
