[package]
name = "libtectonic"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "market data server for contiguous order book ticks"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[dependencies]
csv = "1.1.1"
bitflags = "1.2.0"
byteorder = "1.3.2"
indexmap = "1.2.0"

chrono = "0.4.9"
fern = "0.5.8"
log = "0.4.8"

serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
libc = "0.2.62"

alloc_counter = { optional = true, version = "0.0.3"}

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7.4"

[features]
default = []
count_alloc = ["alloc_counter"]