[package]
name = "libtectonic"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "market data server for contiguous order book ticks"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[dependencies]
csv = "1.1.2"
bitflags = "1.2.1"
byteorder = "1.3.2"
indexmap = "1.3.1"

chrono = "0.4.10"
fern = "0.5.9"
log = "0.4.8"

serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
libc = "0.2.66"

alloc_counter = { version = "0.0.4", optional = true }
arrayvec = "0.5.1"

lazy_static = "1.4.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[features]
default = []
count_alloc = ["alloc_counter"]
