[package]
name = "tdb-server"
version = "0.3.0"
edition = "2018"

[dependencies]
libtectonic = { path = "../libtectonic", version = "0.3.0" }
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
byteorder = "1.3.2"
async-std = "0.99.8"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
clap = "2.33.0"
fern = "0.5.8"
chrono = "0.4.9"
openssl-probe = "0.1.2"
lazy_static = "1.4.0"
circular-queue = "0.2.2"
log = "0.4.8"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7.4"

[dependencies.tempdir]
optional = true
version = "0.3.7"

[features]
default = ["gcs"]
gcs = ["tempdir"]