[package]
name = "tdb_cli"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "client for tectonicdb"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.5.1"
readme = "../../README.md"

[dependencies]
tdb_core = { path = "../tdb-core", version = "0.5.0" }
byteorder = "1.3.4"
log = "0.4.8"
bufstream = "0.1.4"
serde = "1.0.110"
serde_derive = "1.0.104"
serde_json = "1.0.56"
