[package]
name = "tdb_cli"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "client for tectonicdb"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.5.1"
readme = "../../README.md"

[dependencies]
tdb_core = { path = "../tdb-core", version = "0.5.1" }
byteorder = "1.4.3"
log = "0.4.14"
bufstream = "0.1.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
