[package]
name = "tdb_server_core"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "tectonicdb server"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.5.1"
readme = "../../README.md"

[dependencies]
tdb_core = { path = "../tdb-core", version = "0.5.0" }
circular-queue = "0.2.4"

async-std = "1.5.0"
futures = "0.3.5"
ctrlc = "3.1.4"
byteorder = "1.3.4"

serde_derive = "1.0.104"
serde_json = "1.0.53"

log = "0.4.8"
clap = "2.33.1"
fern = "0.6.0"
chrono = "0.4.11"

openssl-probe = "0.1.2"
lazy_static = "1.4.0"

tempdir = { optional = true, version = "0.3.7" }
reqwest = { optional = true, version = "0.10.4" }
serde = { optional = true, version = "1.0.124" }
config = { optional = true, version = "0.10.1" }
time = { optional = true, version = "0.2.16" }

surf = { optional = true, version = "1.0.3" }


alloc_counter = { version = "0.0.4", optional = true }
arrayvec = "0.5.1"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[features]
default = ["influx"]
influx = ["surf"]
gcs = ["tempdir", "reqwest", "serde", "config", "time"]
count_alloc = ["alloc_counter"]
