[package]
name = "tdb-server"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "tectonicdb server"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[dependencies]
libtectonic = { path = "../libtectonic", version = "0.3.0" }
circular-queue = "0.2.2"

futures = "0.3.1"
async-std = "1.0.0"
ctrlc = "3.1.3"
byteorder = "1.3.2"

serde_derive = "1.0.101"
serde_json = "1.0.41"

log = "0.4.8"
clap = "2.33.0"
fern = "0.5.8"
chrono = "0.4.9"

openssl-probe = "0.1.2"
lazy_static = "1.4.0"

tempdir = { optional = true, version = "0.3.7" }
reqwest = { optional = true, version = "0.9.22" }
serde = { optional = true, version = "1.0.101" }
config = { optional = true, version = "0.9.3" }
time = { optional = true, version = "0.1.42" }

alloc_counter = "0.0.3"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7.4"

[features]
default = []
gcs = ["tempdir", "reqwest", "serde", "config", "time"]
