[package]
name = "tdb"
authors = ["Ricky Han <tectonic@rickyhan.com>"]
description = "client for tectonicdb"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2018"
version = "0.3.0"

[dependencies]
libtdbcli = { path = "../libtdbcli", version = "0.3.0" }
libtectonic = { path = "../libtectonic", version = "0.3.0" }
clap = "2.33.0"
fern = "0.5.9"
chrono = "0.4.10"
log = "0.4.8"
